# docs/swagger.json
@@ -565,31 +565,20 @@
         "models.Author": {
             "type": "object",
             "required": [
-                "firstname",
-                "lastname"
+                "fullname"
             ],
             "properties": {
                 "created_at": {
                     "type": "string"
                 },
-                "firstname": {
+                "fullname": {
                     "type": "string",
                     "maxLength": 50,
                     "minLength": 2,
-                    "example": "John"
+                    "example": "John Doe"
                 },
                 "id": {
                     "type": "string"
-                },
-                "lastname": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 2,
-                    "example": "Doe"
-                },
-                "middlename": {
-                    "type": "string",
-                    "example": "O"
                 },
                 "updated_at": {
                     "type": "string"
